tdf#99497 CircleKind ARC, CUT, SECTION to OOXML arc, chord, pie

Before this patch, a classical ellipse or circle was exported as
OOXML preset type 'ellipse', regardless of the value of property
CircleKind. Now the property is evaluated and the corresponding
preset type is used.

Change-Id: I49ff43cf7e2ce02654979e82f7d83d60ace39e23